# Django-SmartBase-Admin-Demo

./: .coveragerc  .eslintrc.js  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  Vagrantfile  commitlint.config.js  copy_staging_db.sh  copy_staging_db_docker.sh  create-lh-project.mjs  db.sqlite3  docker-compose.yml  gulpfile.js  merge_packages.py  package-overwrite.json  package.json  pyproject.toml  requirements.txt  rsync.excludes  setup.py  sonar-project.properties
_dev_docker_services/elasticsearch/: Dockerfile
_dev_docker_services/logstash/: Dockerfile
_dev_docker_services/postgres/: init.sql
_dev_docker_services/rabbitmq/: set_policy.sh
_dev_docker_services/redis/: Dockerfile  redis.conf
blog/: models.py  sb_admin.py
catalog/: sb_admin.py
django_compose_override_prod/: docker-compose.override.yml
django_compose_override_staging/: docker-compose.override.yml
etc/install/: bashrc  initial_setup.sh  install.sh  install_elasticsearch.sh  install_git.sh  install_java.sh  install_kibana.sh  install_logstash.sh  install_odbc.sh  install_phantomjs.sh  install_postgresql.sh  install_python.sh  install_redis.sh  install_selenium.sh  install_virtualenv.sh  startup.sh
etc/redis/: 6379.conf
project/: __init__.py  apps.py  sb_admin_configuration.py  services.py  settings.py  tasks.py  urls.py  wsgi.py
project/catalog/: models.py  sb_admin.py  sb_admin_forms.py  sb_admin_widgets.py  views.py
project/config/: celery.py
sbcore/: exceptions.py  settings.py
sbcore/config/: celery.py  (+1 more)
(+16 files in other folders)
